--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
   <title>eFlybe Technologies | Smart Business Automation & SaaS</title>
   <meta name="description"
     content="eFlybe Technologies is an Indian IT & SaaS company providing business automation and financial reporting solutions." />
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" href="/favicon-light.png" media="(prefers-color-scheme: light)" />
+  <link rel="icon" type="image/png" href="/favicon-dark.png" media="(prefers-color-scheme: dark)" />
+  <link rel="apple-touch-icon" href="/logo.png" />
+
+  <!-- Social Media & Search Appearance -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://eflybe.com/" />
+  <meta property="og:title" content="eFlybe Technologies | Smart Business Automation & SaaS" />
+  <meta property="og:description"
+    content="Indian IT & SaaS company providing business automation and financial reporting solutions." />
+  <meta property="og:image" content="https://eflybe.com/logo.png" />
+
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://eflybe.com/" />
+  <meta property="twitter:title" content="eFlybe Technologies | Smart Business Automation & SaaS" />
+  <meta property="twitter:description"
+    content="Indian IT & SaaS company providing business automation and financial reporting solutions." />
+  <meta property="twitter:image" content="https://eflybe.com/logo.png" />
+
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
