feat: Implement Hero section with a new React component, assets, and foundational global styles.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <meta name="description"
     content="eFlybe Technologies is an Indian IT & SaaS company providing business automation and financial reporting solutions." />
 
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+
   <!-- Favicons -->
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="shortcut icon" href="/favicon.png" />
@@ -55,8 +60,7 @@
       }, 'google_translate_element');
     }
   </script>
-  <script type="text/javascript"
-    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" async></script>
 
   <style>
     /* Hide Google Translate Banner & Widget for Premium Look */
